# pss

./: CMakeLists.txt  README.md
hw01/: CMakeLists.txt  README.md  task.cpp
hw02/: Logger.h  README.md  RoomService.cpp  main.cpp
hw02-03/: CMakeLists.txt  Logger.h  README.md  main.cpp
hw02-03/model/: AccessLevel.h  Capacity.h  Laboratory.h
hw02-03/model/room/: Cabinet.h  ClassRoom.h  ConferenceRoom.h  DirectorCabinet.h  Room.h  (+3 more)
hw02-03/services/: CSVService.cpp  CreatorService.cpp  RoomService.cpp
hw02-03/tests/: Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp  Test6.cpp
hw02/model/: AccessLevel.h  Laboratory.h
hw02/services/: CSVService.cpp  CSVService.h  CreatorService.cpp  RoomService.cpp
hw02/tests/: Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp
hw04/: CMakeLists.txt  README.md
hw04/application/api/: config.h  main.cpp
hw04/application/api/gateways/: AdminGateway.h  BaseGateway.h  DriverGateway.h  MainHandler.cpp  PassengerGateway.h
hw04/application/db/: CSVDatabase.h  SQLDatabase.cpp  TestDatabase.h  database.h
hw04/application/db/db_admin_files/: cars_validation.csv  driver_validation.csv  passenger_validation.csv
hw04/application/db/db_files/: admins.csv  cars.csv  drivers.csv  orders.csv  passengers.csv
hw04/application/model/: Address.h  AdminService.h  Order.h  Passenger.h  model.h
hw04/application/model/exceptions/: DatabaseException.h  ForbiddenException.h  IncorrectDataException.h  NotFoundException.h
hw04/application/model/objects/: Address.h  Admin.h  Car.h  Driver.h  Order.h  Passenger.h  User.h
hw04/application/view/: admin_view.h  driver_view.h  logger.h  passenger_view.h
hw04/docs/: server_info.yaml
hw04/include/pistache/: README.md
hw04/include/pistache/pistache.io/docs/: quickstart.md
hw04/tests/: curl_requests.txt
hw04/tests/Google_tests/: CMakeLists.txt  DriverGetTest.cpp  DriverLoginTest.cpp  PassengerLoginTest.cpp  main_test.cpp
hw04/tests/Google_tests/data/: admin_get_data.json  driver_data.json  driver_login_data.json  drivers.json  order_data.json  passengers.json
hw04/tests/Google_tests/driver/: DriverAcceptOrderTest.cpp  DriverCompleteOrderTest.cpp  DriverGetAvailableOrdersTest.cpp  DriverGetCarTest.cpp  DriverGetTest.cpp  DriverLoginTest.cpp  DriverOrderHistoryTest.cpp  DriverPatchTest.cpp
hw04/tests/Google_tests/passenger/: PassengerGetTest.cpp  PassengerLoginTest.cpp
hw04/tests/Google_tests/templates/: admins.txt
hw04/tests/json_data/: admins.json  drivers.json  passengers.json
hw04/tests/json_data/templates/: drivers.txt  passengers.txt
hw04/tests/request_tests/: DriverLoginTest.http  PassengerLoginTest.http  http-client.env.json
(+22 files in other folders)
